--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,9 +32,8 @@ flutter_intl:
 
 flutter:
   uses-material-design: true
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/logos/
 
   # fonts:
   #   - family: Schyler
