--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,14 +35,10 @@ flutter:
   assets:
     - assets/images/logos/
 
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: User Rounded
+      fonts:
+        - asset: assets/icons/user_rounded.ttf
+    - family: Lock Rounded
+      fonts:
+        - asset: assets/icons/lock_rounded.ttf
