--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,11 +17,16 @@ dependencies:
   go_router: ^12.1.0
   provider: ^6.0.5
   intl: ^0.18.1
+  mobx: ^2.2.1
+  flutter_mobx: ^2.1.1
+  mobx_codegen: ^2.4.0
+  url_launcher: ^6.2.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.1
+  build_runner: ^2.4.6
 
 flutter_intl:
   enabled: true
